@@ -18,6 +18,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
 ### Other features
 
  * Mark calls to `md5` as not being used for secure purposes, to avoid flagging on FIPS-mode systems (Sean Kelly)
+ * Return filters from `parse_query_string` as a `QueryDict` to support multiple values (Aman Pandey)
 
 ### Bug fixes
 
