@@ -4,6 +4,7 @@ from functools import partial
 
 from django.apps import apps
 from django.db import connections
+from django.http import QueryDict
 
 from wagtail.search.index import RelatedFields, SearchField
 
@@ -84,11 +85,15 @@ def normalise_query_string(query_string):
 def separate_filters_from_query(query_string):
     filters_regexp = r'(\w+):(\w+|"[^"]+"|\'[^\']+\')'
 
-    filters = {}
+    filters = QueryDict(mutable=True)
     for match_object in re.finditer(filters_regexp, query_string):
         key, value = match_object.groups()
-        filters[key] = (
-            value.strip('"') if value.strip('"') is not value else value.strip("'")
+        filters.update(
+            {
+                key: value.strip('"')
+                if value.strip('"') is not value
+                else value.strip("'")
+            }
         )
 
     query_string = re.sub(filters_regexp, "", query_string).strip()
